src/styles/List.scss
.List {

	$border-color-hover: rgb(0, 99, 255);
	$border-color-selected: rgb(0, 255, 99);
	$border-color-updated: rgb(255, 165, 0);
	$transition-speed: 0.15s;

	height: 100%;
	overflow-y: hidden;
	display: flex;
	flex-direction: column;

	.items {
		bottom: 0;
		overflow-y: auto;
		height: 100%;
	}

	.list-item {
		border-left: solid black 0;
		transition: border-width $transition-speed linear;

		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;

		.content {
			padding-left: 0.5em;
			padding-bottom: 0.5em;
			height: 100%;
		}

		.list-item-button {
			float: right;
			position: relative;
			right: 0.5em;
			height: 1em;
			top: calc(50% - 0.5em);
			color: rgba(255, 255, 255, 0);
			transition: color $transition-speed linear;
		}

		.list-item-button.edit {
			right: 0.7em;
		}
	}

	.list-item:hover {
		border-left: solid $border-color-hover 3px;
		transition: border-width $transition-speed linear;

		.list-item-button {
			color: red;
			transition: color $transition-speed linear;
		}

		.list-item-button.edit {
			color: black;
		}
	}

	.list-item.selected {
		border-left: solid $border-color-selected 3px;
		transition: border-width $transition-speed linear;
	}

	.list-item.updated:not(.selected) {
		border-left: solid $border-color-updated 3px;
		transition: border-width $transition-speed linear;
	}
}

.List.card-list {

	$border-color: #111;
	$text-color: white;

	.list-item {
		margin-bottom: 0.5em;
		height: 4em;

		text-shadow: rgba(255, 255, 255, 0.4) 0 0 15px, black 0 0 3px, black 0 0 1px;

		border-top: solid $border-color 1px;
		border-bottom: solid $border-color 1px;

		color: $text-color;

		h2 {
			color: $text-color;
			margin-bottom: 0.2em;
			min-height: 1em;
		}
		span {
			height: 2em;
			min-height: 1em;
		}

	}

	.content {
		background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
	}
}

.List.export-card-list {

	$item-height: 2.4em;

	max-height: 400px;

	.list-item {
		height: $item-height;
		margin-bottom: 0.5em;

		.ant-input-number {
			height: $item-height;
		}
	}
}

.List.effect-list {
	.list-item:hover {
		font-weight: bold;
	}
}

